<resources>
    <string name="app_name">InventoryApp</string>
    <string name="app_logo">App Logo</string>
    <string name="inventory_manager_login">Inventory Manager Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_new_item">Add New Item</string>
    <string name="current_inventory">Current Inventory</string>
    <string name="sms_message">Enable Low Inventory SMS Alerts</string>
    <string name="save_to_inventory">Save to Inventory</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="add_new_inventory_item">Add New Inventory Item</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="delete">Delete</string>
    <string name="item_quantity_format">Qty: %1$d</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
    <string name="delete_database">Delete Database</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="add_database">Add Database</string>
    <string name="add_new_database">Add New Database</string>
    <string name="database_name">Database Name</string>

</resources>