<?xml version="1.0" encoding="utf-8"?>

<!--
    File: database_description.xml
    Description: Description card that pops up when database info button is clicked.
    The database delete button is also present in this card.
    Author: Aaditya Fadnavis
    Date: June 5, 2026

    Details: User can optionally add a description with a maximum of 1000 characters.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <!-- CardView (Popup Widget) -->
    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Description (Input Field) -->
            <EditText
                android:id="@+id/database_description_input"
                android:layout_width="320dp"
                android:layout_height="120dp"
                android:autofillHints="Description"
                android:gravity="center_horizontal"
                android:hint="@string/description"
                android:inputType="text"
                android:textColor="@color/grey"
                android:maxLength="1000" />

            <!-- Save Description (Button) -->
            <Button
                android:id="@+id/btn_save_description"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:cornerRadius="20dp"/>

            <!-- Delete Database (Button) -->
            <Button
                android:id="@+id/btn_delete_database"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_database"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>